--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bufferutil": "3.0.3",
     "cors": "^2.8.4",
     "express": "4.16.2",
+    "jsonwebtoken": "^8.1.0",
     "node-static": "^0.7.10",
     "socket.io": "^2.0.4",
     "utf-8-validate": "4.0.0",
